Version 2.02.169 - 
=====================================
  Simplify internal _info_run() and use _setup_task_run() for mknod.
  Better API for internal function _setup_task_run.
  Avoid using lv_has_target_type() call within lv_info_with_seg_status.
  Simplify internal lv_info_with_seg_status API.
  Decide which status is needed in one place for lv_info_with_seg_status.
  Fix matching of LV segment when checking for it info status.
  Report log_warn when status cannot be parsed.
  Test segment type before accessing segment members when checking status.
  Implement compatible target function for stripe segment.
  Use status info to report merge failed and snapshot invalid lvs fields.

Version 2.02.168 - 30th November 2016
=====================================
  Display correct sync_percent on large RaidLVs
  lvmdbusd --blackboxsize <n> added, used to override default size of 16
  Allow a transiently failed RaidLV to be refreshed
  Use lv_update_and_reload() inside mirror code where it applies.
  Preserve mirrored status for temporary layered mirrors.
  Use transient raid check before repairing raid volume.
  Implement transient status check for raid volumes.
  Only log msg as debug if lvm2-lvmdbusd unit missing for D-Bus notification.
  Avoid duplicated underscore in name of extracted LV image.
  Missing stripe filler now could be also 'zero'.
  lvconvert --repair accepts --interval and --background option.
  More efficiently prepare _rmeta devices when creating a new raid LV.

Version 2.02.167 - 5th November 2016
====================================
  Use log_error in regex and sysfs filter to describe reason of failure.
  Fix blkdeactivate to deactivate dev stack if dev on top already unmounted.
  Prevent non-synced raid1 repair unless --force
  Prevent raid4 creation/conversion on non-supporting kernels
  Add direct striped -> raid4 conversion
  Fix raid4 parity image pair position on conversions from striped/raid0*